@@ -17,10 +17,12 @@ stopwords = validator
 -remove = Test::CleanNamespaces
 
 [Prereqs / DevelopRequires]
-Moose      = 2.0000
-Specio     = 0.14
-Sub::Util  = 1.40
-Type::Tiny = 0
+Const::Fast = 0.014
+Hash::Util  = 0
+Moose       = 2.0000
+Specio      = 0.14
+Sub::Util   = 1.40
+Type::Tiny  = 0
 
 [Prereqs / Recommends]
 Sub::Util = 1.40
